# cuda-ops

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt
src/ops/elementwise/: README.md  benckmark.py  elementwise_add.cu  elementwise_add.cuh  torch_bindings.cu
src/ops/reduce/: .gitignore  CMakeLists.txt  reduce_v0_global_memory.cu  reduce_v1_shared_memory.cu  reduce_v2_no_divergence_and_bank_conflict.cu  reduce_v3_1_add_during_load.cu  reduce_v3_2_add_during_load.cu  reduce_v4_unroll_last_warp.cu  reduce_v5_loop_completely_unroll.cu  reduce_v6_multi_add.cu  reduce_v7_shuffle.cu
src/ops/relu/: README.md  benchmark.py  relu.cu  relu.cuh  torch_bindings.cu
src/utils/: get_gpu_config.cu
utils/: count_lines.py
