add_executable(reduce_v0_global_memory reduce_v0_global_memory.cu)
target_link_libraries(reduce_v0_global_memory PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(reduce_v0_global_memory PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G)
endif()

add_executable(reduce_v1_shared_memory reduce_v1_shared_memory.cu)
target_link_libraries(reduce_v1_shared_memory PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(reduce_v1_shared_memory PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G)
endif()

add_executable(reduce_v2_no_divergence_and_bank_conflict reduce_v2_no_divergence_and_bank_conflict.cu)
target_link_libraries(reduce_v2_no_divergence_and_bank_conflict PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(reduce_v2_no_divergence_and_bank_conflict PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G)
endif()

add_executable(reduce_v3_1_add_during_load reduce_v3_1_add_during_load.cu)
target_link_libraries(reduce_v3_1_add_during_load PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(reduce_v3_1_add_during_load PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G)
endif()

add_executable(reduce_v3_2_add_during_load reduce_v3_2_add_during_load.cu)
target_link_libraries(reduce_v3_2_add_during_load PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(reduce_v3_2_add_during_load PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G)
endif()

add_executable(reduce_v4_unroll_last_warp reduce_v4_unroll_last_warp.cu)
target_link_libraries(reduce_v4_unroll_last_warp PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(reduce_v4_unroll_last_warp PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G)
endif()

add_executable(reduce_v5_loop_completely_unroll reduce_v5_loop_completely_unroll.cu)
target_link_libraries(reduce_v5_loop_completely_unroll PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(reduce_v5_loop_completely_unroll PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G)
endif()

add_executable(reduce_v6_multi_add reduce_v6_multi_add.cu)
target_link_libraries(reduce_v6_multi_add PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(reduce_v6_multi_add PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G)
endif()

add_executable(reduce_v7_shuffle reduce_v7_shuffle.cu)
target_link_libraries(reduce_v7_shuffle PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(reduce_v7_shuffle PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G)
endif()

